# ats-pass-ai

./: .gitignore  LICENCE.md  README.md  README2.md  ats_pass_ai.code-workspace  chat_response.txt  decision_Journal.md  decision_timeline  generate_content_response.txt  main.py  organize_user_info_old.py  output_log.txt  payload.txt  poetry_command.py  pyproject.toml  temp.txt
chroma_db/: chroma.sqlite3
info_collection/: info_collection.code-workspace  pyproject.toml
info_collection/src/info_collection/: llm_tasks_instructions.py  main.py
info_collection/src/info_collection/tools/: llm_task.py  web_scraper.py
info_extraction/: all_togather_skills_extraction_task.txt  ats_friendly_skills_task.txt  awards_recognitions_extraction_task.txt  career_objective_task.txt  correct_categorization_of_skills_task.txt  coursework_extraction_task.txt  education_extraction_task.txt  job_description_extracted_keywords.txt  job_description_relevance_task.txt  miscellaneous_extraction_task.txt  personal_information_extraction_task.txt  personal_traits_interests_extraction_task.txt  profile_builder_task.txt  project_experience_extraction_task.txt  references_extraction_task.txt  skills_extraction_task.txt  skills_from_exp_and_project.txt  split_context_of_ats_friendly_keywords_into_experiences.txt  split_context_of_ats_friendly_skills_task.txt  volunteer_work_extraction_task.txt  work_experience_extraction_task.txt
info_extraction/draft_output/: cover_letter_generation_task.txt  resume_compilation.txt  resume_compilation_task.txt  resume_generation_task.aux  resume_generation_task.out  resume_in_json.txt  resume_in_json_task.json  resume_in_json_task.txt  resume_json.txt
info_extraction/jd_keyword_extraction/: job_description_extracted_keywords.txt
info_extraction/pre_tasks/: all_togather_skills_extraction_task.txt  ats_friendly_keywords_into_experiences.txt  ats_friendly_skills_pre_task.txt  ats_friendly_skills_task.txt  experience_choosing_task.txt  gather_info_of_choosen_experiences.txt  gather_info_of_chosen_experiences.txt  personal_information_extraction_task.txt  project_experience_extraction_task.txt  skills_extraction_task.txt  skills_from_exp_and_project.txt  split_context_of_ats_friendly_skills_task.txt  split_missing_skills_task.txt  (+2 more)
info_files/: applicant_info copy.txt  applicant_info_organized.txt  job_description.txt  job_description_pulok.txt  user_info.txt  user_info_organized.txt
output/: omega_theme_final_output.aux  omega_theme_final_output.out
resume_crew/: output_log.txt  pyproject.toml
resume_crew/src/resume_crew/: main.py  resume_crew.code-workspace  resume_crew.py
resume_crew/src/resume_crew/config/: agents.yaml  tasks.yaml
resume_crew/src/resume_crew/tools/: rag_search_tool.py
shared/: pyproject.toml  shared.code-workspace
shared/info_extraction/: awards_recognitions_extraction_task.txt  career_objective_task.txt  correct_categorization_of_skills_task.txt  coursework_extraction_task.txt  education_extraction_task.txt  personal_traits_interests_extraction_task.txt  profile_builder_task.txt  references_extraction_task.txt  split_context_of_ats_friendly_keywords_into_experiences.txt  volunteer_work_extraction_task.txt
shared/info_extraction/pre_tasks/: applicant_philosophy_extraction_task.txt  ats_friendly_keywords_into_experiences.txt  ats_friendly_skills_task.txt  company_value_extraction.txt  experience_choosing_task.txt  gather_info_of_chosen_experiences.txt  personal_information_extraction_task.txt  project_experience_extraction_task.txt  skills_extraction_task.txt  skills_from_exp_and_project.txt  split_context_of_ats_friendly_skills_task.txt  split_context_of_experience_choosing_task.txt  split_missing_skills_task.txt  work_experience_extraction_task.txt
shared/info_files/: applicant_info_pulok.txt  applicant_info_saif.txt  jd_text_file.txt  job_description.txt
shared/info_files/llm_task_output/: applicant_info_organized.txt  company_value_extraction.txt  job_description.txt  job_description_extracted_keywords.txt
shared/src/path/: output_file_paths.py
shared/src/util/: limiter.py  timer.py
temp_folder/: data_extractor_tool.py  llm_config_example.txt  temp2.py
theme_crews/omega_theme_crew/: omega_theme_crew.code-workspace  output_log.txt  pyproject.toml
theme_crews/omega_theme_crew/src/omega_theme_crew/: latex_generator.py  main.py  omega_file_paths.py  omega_theme_crew.code-workspace  omega_theme_crew.py  output_log.txt
theme_crews/omega_theme_crew/src/omega_theme_crew/config/: omega_theme_agents.yaml  omega_theme_tasks.yaml
theme_crews/omega_theme_crew/src/omega_theme_crew/theme_latex/: ats-pass-ai-openfront.cls  omega_theme_final_output.tex
theme_crews/omega_theme_crew/src/omega_theme_crew/theme_latex/pre_tasks/: assess_and_prioritize.txt  concise_jd_task.txt  data_extraction.txt  exp_item_chooser.txt  exp_item_count_chooser.txt  experience_content_refinement.txt  experience_section.txt  final_selection.txt  link_handler.txt  link_latex.txt  relevance_assessment.txt  remove_data.txt  select_first_column_content.txt  summary_point_selector.txt
theme_crews/omega_theme_crew/src/omega_theme_crew/theme_latex/sub_tex_files_dir/: career_objective_section.tex  coursework_section.tex  education_section.tex  exp_latex_verified.tex  experience_section.tex  name_section.tex  references_section.tex  skill_section.tex  volunteer_section.tex
user_info_extraction/: personal_information_extraction_task.txt  personal_information_task.txt  user_info_basic.json
(+94 files in other folders)
