[tool.poetry]
name = "ats_pass_ai"
version = "0.1.0"
description = "A highly tailored resume maker tool powered by AI to pass the ats system." 
authors = ["Saif Mahmud <msaifofficial@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {version = "0.30.0rc6", extras = ["tools"]}
langchain-google-genai = "^1.0.2"
langchain-groq = "^0.1.3"
google-generativeai = "^0.5.2"
langchain-google-vertexai = "^1.0.3"
agentops = "^0.1.9"

[tool.poetry.scripts]
ats_pass_ai = "ats_pass_ai.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"