[tool.poetry]
name = "ats_pass_ai"
version = "0.1.0"
description = "A highly tailored resume maker tool powered by AI to pass the ats system." 
authors = ["Saif Mahmud <msaifofficial@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-google-genai = "^1.0.2"
google-generativeai = "^0.5.2"
agentops = "^0.1.9"
duckduckgo-search = "^6.1.0"
crewai = {extras = ["tools"], version = "^0.30.11"}
prettytable = "^3.10.0"
sentence-transformers = "^3.0.1"

[tool.poetry.scripts]
ats_pass_ai = "ats_pass_ai.main:run"
ats_pass_ai_check_limit = "ats_pass_ai.limiter:printRemainingRequestsPerDay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"